fix search on small display

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ height:30px;
 }
 .ui-menu .ui-menu-item {
 width: 100vw;
-font-size:0.8em!important;
+font-size:1em!important;
 padding-right:0px;
 }
 #logo {
